Use the Java 17 method, not Java 21